add upload file cards